fixed img overflow

--- a/client/src/css/appLayoutSection/notFound.module.css
+++ b/client/src/css/appLayoutSection/notFound.module.css
@@ -20,7 +20,7 @@
   /* border: 1px solid black; */
 }
 .imgDiv img {
-  /* object-fit: contain; */
+  object-fit: contain;
   width: 80%;
   height: 80%;
 }
